@@ -1,0 +1,10 @@
+namespace Qyoto{
+
+	using System;
+
+	internal class QAbstractButtonInternal : QAbstractButton {
+		protected QAbstractButtonInternal(Type dummy) : base((Type) null) {}
+		
+		protected override void PaintEvent (QPaintEvent e) {}
+	}
+}
