@@ -3,14 +3,14 @@ namespace Qyoto {
 	using System;
 	using System.Runtime.InteropServices;
 
-	public class QAbstractItemDelegateHelper : QAbstractItemDelegate {
+	internal class QAbstractItemDelegateInternal : QAbstractItemDelegate {
 		[DllImport("libqyoto", CharSet=CharSet.Ansi)]
 		static extern void QAbstractItemDelegatePaint(IntPtr obj, IntPtr painter, IntPtr option, IntPtr index);
 		
 		[DllImport("libqyoto", CharSet=CharSet.Ansi)]
 		static extern IntPtr QAbstractItemDelegateSizeHint(IntPtr obj, IntPtr option, IntPtr index);
 		
-		protected QAbstractItemDelegateHelper(Type dummy) : base((Type) null) {}
+		protected QAbstractItemDelegateInternal(Type dummy) : base((Type) null) {}
 		
 		public override void Paint (QPainter painter, QStyleOptionViewItem option, QModelIndex index) {
 			QAbstractItemDelegatePaint((IntPtr) GCHandle.Alloc(this), (IntPtr) GCHandle.Alloc(painter), 
